--- a/vignere_cipher.html
+++ b/vignere_cipher.html
@@ -22,7 +22,7 @@
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <a class="dropdown-item" href="./index.html">Caesar Cipher</a>
                 <a class="dropdown-item" href="./vignere_cipher.html">Vigenère Cipher</a>
-                <a class="dropdown-item" href="./poly_cipher.html">PolyAlphabetic Cipher</a>
+                <a class="dropdown-item" href="./mono_cipher.html">Mono Alphabetic Cipher</a>
                
               </div>
             </li>
