--- a/mono_cipher.html
+++ b/mono_cipher.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary px-3">
-        <a class="navbar-brand" href="#">Network Security</a>
+        <a class="navbar-brand" href="./index.html">Network Security</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -22,7 +22,7 @@
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <a class="dropdown-item" href="./index.html">Caesar Cipher</a>
                 <a class="dropdown-item" href="./vignere_cipher.html">Vigenère Cipher</a>
-                <a class="dropdown-item" href="./poly_cipher.html">PolyAlphabetic Cipher</a>
+                <a class="dropdown-item" href="./mono_cipher.html">Mono Alphabetic Cipher</a>
                
               </div>
             </li>
@@ -30,7 +30,7 @@
         </div>
       </nav>
       <section class="container mt-4">
-        <h2 class="mb-4">PolyAlphabetic Cipher</h2>
+        <h2 class="mb-4">Mono Alphabetic Cipher</h2>
         <div class="d-flex gap-5">
             <h5 onclick="onSelect('Encode')" style="cursor: pointer;" id="h-enc">Encode</h5>
             <h5 onclick="onSelect('Decode')" style="cursor: pointer;" id="h-dec">Decode</h5>
@@ -55,6 +55,6 @@
       <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-      <script src="./poly_cipher.js"></script>
+      <script src="./mono_cipher.js"></script>
 </body>
 </html>
