--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <a class="dropdown-item" href="./index.html">Caesar Cipher</a>
                 <a class="dropdown-item" href="./vignere_cipher.html">Vigenère Cipher</a>
                 <a class="dropdown-item" href="./mono_cipher.html">Mono Alphabetic Cipher</a>
-               
+                <a class="dropdown-item" href="./otp.html">OTP Cipher</a>
                
               </div>
             </li>
